--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "axios": "^0.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "howler": "^2.1.2",
+    "nodemon": "^1.19.4",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
