--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "howler": "^2.1.2",
     "nodemon": "^1.19.4",
     "react": "^16.11.0",
+    "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0"
