--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "react-confirm-alert": "^2.4.1",
     "react-dom": "^16.11.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.4.0",
     "sweetalert2": "^8.18.6"
   },
   "scripts": {
